fix: align center category button elements

--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -1,4 +1,5 @@
 /* GLOBAL */
+
     .hidden {
         display: none;
     }
@@ -142,6 +143,10 @@
             }
 
                 .category-button {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+
                     border-radius: 5pt;
                     padding: 5pt;
 
